# atmel_cmake

./: .gitignore  blank_project.atsln  readme.txt
blank_project/: CMakeLists.txt  main.c  x.s
blank_project/CMake/: toolchain.cmake
blank_project/src/: CMakeLists.txt  atmel_start_pins.h  driver_init.c
blank_project/src/Config/: CMakeLists.txt  RTE_Components.h  hpl_gclk_config.h  hpl_oscctrl_config.h  peripheral_clk_config.h
blank_project/src/Device_Startup/: CMakeLists.txt  same51n20a_flash.ld
blank_project/src/atmel_libs/: CMakeLists.txt  same51.h
blank_project/src/atmel_libs/component/: CMakeLists.txt
blank_project/src/atmel_libs/instance/: CMakeLists.txt
blank_project/src/atmel_libs/pio/: CMakeLists.txt
blank_project/src/hal/: CMakeLists.txt  Makefile
blank_project/src/hal/utils/: CMakeLists.txt  Makefile
blank_project/src/hpl/: CMakeLists.txt
blank_project/src/hpl/oscctrl/: hpl_oscctrl.c
blank_project/src/hri/: CmakeLists.txt  hri_gclk_e51.h  hri_oscctrl_e51.h
blank_project/tools/openocd/: atsame51_jlink.cfg
